--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl en">
+<html lang="pl-PL">
 
 <head>
     <meta charset="UTF-8">
@@ -81,19 +81,19 @@
         <section>
             <h2>Czym się zajmujemy</h2>
             <ul>
-                <li><img src="./images/img.jpg" width="270" height="260" alt="Pisanie kodu na klawiaturze" </li>
-                <li><img src="./images/img2.jpg" width="270" height="260" alt="Używa telefonu i laptopa" </li>
-                <li><img src="./images/img3.jpg" width="270" height="260" alt="Używa tabletu" </li>
+                <li><img src="./images/walek.jpg" width="270" height="260" alt="Pisanie kodu na klawiaturze"></li>
+                <li><img src="./images/walek2.jpg" width="270" height="260" alt="Używa telefonu i laptopa"></li>
+                <li><img src="./images/walek3.jpg" width="270" height="260" alt="Używa tabletu"></li>
             </ul>
         </section>
 
         <section>
             <h2>Nasz zespół</h2>
             <ul>
-                <li><img src="./images/1.jpg" width="370" height="294" alt="Gość John Doe Product Designer" </li>
-                <li><img src="./images/2.jpg" width="370" height="294" alt="Kobieta John Doe Frontend Developer" </li>
-                <li><img src="./images/3.jpg" width="370" height="294" alt="Gość John Doe 2 Marketing" </li>
-                <li><img src="./images/4.jpg" width="370" height="294" alt="Gość John Doe 3 UI Designer" </li>
+                <li><img src="./images/1.jpg" width="370" height="294" alt="Gość John Doe Product Designer"></li>
+                <li><img src="./images/2.jpg" width="370" height="294" alt="Kobieta John Doe Frontend Developer"></li>
+                <li><img src="./images/3.jpg" width="370" height="294" alt="Gość John Doe 2 Marketing"></li>
+                <li><img src="./images/4.jpg" width="370" height="294" alt="Gość John Doe 3 UI Designer"></li>
             </ul>
         </section>
 
