Zadanie nr 1 poprawiamy2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="+48 111 111 111">+48 111 111 111</a>
+                        <a href="+48&#xa0;111&#xa0;111&#xa0;111">+48&#xa0;111&#xa0;111&#xa0;111</a>
                     </p>
 
                 </li>
@@ -112,7 +112,7 @@
             </li>
             <li>
                 <p>
-                    <a href="+48 111 111 111">+48 111 111 111</a>
+                    <a href="+48&#xa0;111&#xa0;111&#xa0;111">+48&#xa0;111&#xa0;111&#xa0;111</a>
                 </p>
 
             </li>
