Zadanie nr 1 poprawiamy3

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </button>
         </section>
 
-        <section>
+        <div>
             <ul>
                 <li>
                     <article>
@@ -76,7 +76,7 @@
                     </article>
                 </li>
             </ul>
-        </section>
+        </div>
 
         <section>
             <h2>Czym się zajmujemy</h2>
