--- a/index.html
+++ b/index.html
@@ -78,25 +78,38 @@
         <section>
             <h2>Czym się zajmujemy</h2>
             <ul>
-                <li><img src="./images/walek.jpg" width="270" height="260" alt="Pisanie kodu na klawiaturze"></li>
-                <li><img src="./images/walek2.jpg" width="270" height="260" alt="Używa telefonu i laptopa"></li>
-                <li><img src="./images/walek3.jpg" width="270" height="260" alt="Używa tabletu"></li>
+                <li><img src="./images/walek.jpg" width="370" height="294" alt="Pisanie kodu na klawiaturze"></li>
+                <li><img src="./images/walek2.jpg" width="370" height="294" alt="Używa telefonu i laptopa"></li>
+                <li><img src="./images/walek3.jpg" width="370" height="294" alt="Używa tabletu"></li>
             </ul>
         </section>
 
         <section>
             <h2>Nasz zespół</h2>
             <ul>
-                <li><img src="./images/1.jpg" width="370" height="294" alt="Gość John Doe Product Designer"></li>
-                <li><img src="./images/2.jpg" width="370" height="294" alt="Kobieta John Doe Frontend Developer"></li>
-                <li><img src="./images/3.jpg" width="370" height="294" alt="Gość John Doe 2 Marketing"></li>
-                <li><img src="./images/4.jpg" width="370" height="294" alt="Gość John Doe 3 UI Designer"></li>
+                <li><img src="./images/1.jpg" width="270" height="260" alt="Gość John Doe Product Designer">
+                    <h3>John Doe</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li><img src="./images/2.jpg" width="270" height="260" alt="Kobieta John Doe Frontend Developer">
+                    <h3>John Doe</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/3.jpg" width="270" height="260" alt="Gość John Doe 2 Marketing">
+                    <h3>John Doe</h3>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="./images/4.jpg" width="270" height="260" alt="Gość John Doe 3 UI Designer">
+                    <h3>John Doe</h3>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
 
     </main>
 
     <footer>
+        <a href="index.html">WebStudio</a>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
 
